Changes from closeheat live editor

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>An Important Title For an Important Landing Page</title>
+    <title>Quiero Mi Bici</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="css/app.css">
@@ -11,12 +11,12 @@
     <div class="hero">
       <div class="container">
         <nav class="row">
-          <div class="col-md-12"><a href="/" class="logo">Mario Andres Botero Florez</a></div>
+          <div class="col-md-12"><a href="/" class="logo">#QMB QuieroMiBici</a></div>
         </nav>
         <div class="row">
           <div class="col-md-10">
-            <h1>Drive safely with Mario Andres Botero Florez</h1>
-            <h2>My price. My schedule. My choice.</h2>
+            <h1>#QMB</h1>
+            <h2>Quiero Mi Bici</h2>
           </div>
         </div>
         <div class="row call-to-action">
